--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -9,6 +9,10 @@
   padding: 20px;
   color: #adaeb9;
   border-radius: 5px;
+  transition: box-shadow 0.3s;
+}
+.movies .movie:hover {
+  cursor: default;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
 }
