--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
-  background-color: #eff3f7;
+  background-color: #eeeeee;
   height: 100%;
 }
 
