--- a/src/components/Movie.css
+++ b/src/components/Movie.css
@@ -17,6 +17,12 @@
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
 }
 
+.movies .movie .link {
+  display: flex;
+  text-decoration: none;
+  color: inherit;
+}
+
 .movie_poster {
   position: relative;
   top: -50px;
